--- a/uniphc/.gitignore
+++ b/uniphc/.gitignore
@@ -8,7 +8,7 @@
 .buildlog/
 .history
 .svn/
-*_controller.dart
+
 # IntelliJ related
 *.iml
 *.ipr
@@ -32,6 +32,12 @@
 
 # Web related
 lib/generated_plugin_registrant.dart
+
+# Symbolication related
+app.*.symbols
+
+# Obfuscation related
+app.*.map.json
 
 # Exceptions to above rules.
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
