--- a/uniphc/pubspec.yaml
+++ b/uniphc/pubspec.yaml
@@ -1,5 +1,9 @@
 name: uniphc
-description: A new Flutter application.
+description: A new Flutter project. Created by Slidy
+
+# The following line prevents the package from being accidentally published to
+# pub.dev using `pub publish`. This is preferred for private packages.
+publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -14,31 +18,24 @@ description: A new Flutter application.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  hasura_connect: ^1.2.1+1
+  dio: ^3.0.9
+  rxdart: ^0.24.1
+  bloc_pattern: ^2.5.1
   flutter:
     sdk: flutter
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
-  font_awesome_flutter: ^7.1.0
-  flutter_staggered_grid_view: ^0.3.0
-  cloud_firestore: ^0.12.9
-  carousel_pro: ^1.0.0
-  transparent_image: ^1.0.0
-  scoped_model: ^1.0.1
-  firebase_auth: ^0.11.1+12
-  url_launcher: ^5.1.1
-  path_provider: ^0.4.1
 
 dev_dependencies:
+  mockito: ^4.1.1
   flutter_test:
     sdk: flutter
-
-
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -51,13 +48,10 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
-  assets:
-    - images/logo-unip-home.png
-
   # To add assets to your application, add an assets section, like this:
   # assets:
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
+  #   - images/a_dot_burr.jpeg
+  #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
