--- a/uniphc/pubspec.yaml
+++ b/uniphc/pubspec.yaml
@@ -21,10 +21,10 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
-  hasura_connect: ^1.2.1+1
   dio: ^3.0.9
-  rxdart: ^0.24.1
-  bloc_pattern: ^2.5.1
+  flutter_mobx: ^1.1.0
+  mobx: ^1.2.1
+  flutter_modular: ^1.2.5+1
   flutter:
     sdk: flutter
 
@@ -34,6 +34,8 @@ dependencies:
 
 dev_dependencies:
   mockito: ^4.1.1
+  mobx_codegen: ^1.1.0
+  build_runner: ^1.10.0
   flutter_test:
     sdk: flutter
 
