--- a/uniphc/pubspec.yaml
+++ b/uniphc/pubspec.yaml
@@ -21,10 +21,11 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  hasura_connect: ^1.2.2+1
   dio: ^3.0.9
-  flutter_mobx: ^1.1.0
-  mobx: ^1.2.1
-  flutter_modular: ^1.2.5+1
+  flutter_mobx: ^1.1.0+1
+  mobx: ^1.2.1+1
+  flutter_modular: ^1.3.1
   flutter:
     sdk: flutter
 
@@ -34,7 +35,7 @@ dependencies:
 
 dev_dependencies:
   mockito: ^4.1.1
-  mobx_codegen: ^1.1.0
+  mobx_codegen: ^1.1.0+1
   build_runner: ^1.10.0
   flutter_test:
     sdk: flutter
@@ -80,3 +81,4 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+scripts:
