--- a/uniphc/.vscode/launch.json
+++ b/uniphc/.vscode/launch.json
@@ -3,12 +3,10 @@
     // Hover to view descriptions of existing attributes.
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
-    "configurations": [
-        {
-            "name": "Flutter",
-            "program": "lib/main.dart",
-            "request": "launch",
-            "type": "dart"
-        }
-    ]
+    "configurations": [{
+        "name": "Flutter",
+        "program": "lib/main.dart",
+        "request": "launch",
+        "type": "dart"
+    }]
 }
