--- a/uniphc/pubspec.yaml
+++ b/uniphc/pubspec.yaml
@@ -29,11 +29,9 @@ dependencies:
   flutter_modular: ^1.3.1
   flutter:
     sdk: flutter
-
-
+  animated_card: ^1.0.0+8
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-
 dev_dependencies:
   mockito: ^4.1.1
   mobx_codegen: ^1.1.0+1
@@ -43,27 +41,22 @@ dev_dependencies:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter.
 flutter:
   uses-material-design: true
   assets:
     - assets/images/
-    
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
-
-  # To add assets to your application, add an assets section, like this:
+    # The following line ensures that the Material Icons font is
+    # included with your application, so that you can use the icons in
+    # the material Icons class.
+    # To add assets to your application, add an assets section, like this:
     # assets:
-      #   - images/a_dot_burr.jpeg
-      #   - images/a_dot_ham.jpeg
+    #   - images/a_dot_burr.jpeg
+    #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
@@ -83,4 +76,5 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
-scripts:
+scripts: null
+
