--- a/uniphc/pubspec.yaml
+++ b/uniphc/pubspec.yaml
@@ -31,7 +31,8 @@ dependencies:
     sdk: flutter
   animated_card: ^1.0.0+8
   build_test: ^1.2.1
-  # The following adds the Cupertino Icons font to your application.
+  _fe_analyzer_shared: ^6.0.0
+  slidy: ^2.1.2+2  # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
 dev_dependencies:
   mockito: ^4.1.1
