--- a/uniphc/pubspec.yaml
+++ b/uniphc/pubspec.yaml
@@ -18,10 +18,11 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: "any"
 
 dependencies:
   find_dropdown: ^0.2.0
+  animated_card: ^1.0.0+8
   hasura_connect: ^1.2.2+1
   dio: ^3.0.9
   flutter_mobx: ^1.1.0+1
@@ -29,10 +30,8 @@ dependencies:
   flutter_modular: ^1.3.1
   flutter:
     sdk: flutter
-  animated_card: ^1.0.0+8
-  build_test: ^1.2.1
-  _fe_analyzer_shared: ^6.0.0
-  slidy: ^2.1.2+2  # The following adds the Cupertino Icons font to your application.
+  slidy: ^2.1.2+2
+  # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
 dev_dependencies:
   mockito: ^4.1.1
@@ -79,4 +78,3 @@ flutter:
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
 scripts: null
-
