--- a/uniphc/pubspec.yaml
+++ b/uniphc/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   slidy: ^2.1.2+2
   json_serializable: ^3.4.0
   bordered_text: ^1.0.0
+  material_design_icons_flutter: ^4.0.5345
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
 dev_dependencies:
