--- a/uniphc/pubspec.yaml
+++ b/uniphc/pubspec.yaml
@@ -21,6 +21,7 @@ environment:
   sdk: "any"
 
 dependencies:
+  sqflite: ^1.3.1
   find_dropdown: ^0.2.0
   animated_card: ^1.0.0+8
   hasura_connect: ^1.2.2+1
