--- a/uniphc/pubspec.yaml
+++ b/uniphc/pubspec.yaml
@@ -23,7 +23,6 @@ environment:
 dependencies:
   sqflite: ^1.3.1
   find_dropdown: ^0.2.0
-  animated_card: ^1.0.0+8
   hasura_connect: ^1.2.2+1
   dio: ^3.0.9
   flutter_mobx: ^1.1.0+1
@@ -33,8 +32,9 @@ dependencies:
     sdk: flutter
   slidy: ^2.1.2+2
   json_serializable: ^3.4.0
-  bordered_text: ^1.0.0
   material_design_icons_flutter: ^4.0.5345
+  flutter_launcher_icons: ^0.7.5
+  path: ^1.7.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
 dev_dependencies:
@@ -53,16 +53,24 @@ flutter:
     - assets/images/
 
   fonts:
-    - family: ArialRounded
+    - family: TickingTimebomb
       fonts:
-        - asset: fonts/ARLRDBD.TTF
-    # The following line ensures that the Material Icons font is
-    # included with your application, so that you can use the icons in
-    # the material Icons class.
-    # To add assets to your application, add an assets section, like this:
-    # assets:
-    #   - images/a_dot_burr.jpeg
-    #   - images/a_dot_ham.jpeg
+        - asset: fonts/TickingTimebombBB.ttf
+    - family: CodeBold
+      fonts:
+        - asset: fonts/CODE_Bold.otf
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/logo_icon.png"
+  # The following line ensures that the Material Icons font is
+  # included with your application, so that you can use the icons in
+  # the material Icons class.
+  # To add assets to your application, add an assets section, like this:
+  # assets:
+  #   - images/a_dot_burr.jpeg
+  #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
   # For details regarding adding assets from package dependencies, see
