--- a/uniphc/pubspec.yaml
+++ b/uniphc/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   json_serializable: ^3.4.0
   material_design_icons_flutter: ^4.0.5345
   flutter_launcher_icons: ^0.7.5
+  flare_flutter: ^2.0.6
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
 dev_dependencies:
