--- a/uniphc/pubspec.yaml
+++ b/uniphc/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter project. Created by Slidy
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -21,29 +21,28 @@ environment:
   sdk: "^2.1.0"
 
 dependencies:
-  sqflite: ^1.3.1
-  path: ^1.7.0
-  find_dropdown: ^0.2.0
-  hasura_connect: ^1.2.2+1
-  dio: ^3.0.9
-  flutter_mobx: ^1.1.0+1
-  mobx: ^1.2.1+1
-  flutter_modular: ^1.3.1
   flutter:
     sdk: flutter
-  slidy: ^2.1.2+2
+  dio: ^3.0.9
+  find_dropdown: ^0.2.0
+  flare_flutter: ^2.0.6
+  flutter_launcher_icons: ^0.7.5
+  flutter_mobx: ^1.1.0+1
+  flutter_modular: ^2.0.1
+  hasura_connect: ^1.2.2+1
   json_serializable: ^3.4.0
   material_design_icons_flutter: ^4.0.5345
-  flutter_launcher_icons: ^0.7.5
-  flare_flutter: ^2.0.6
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  mobx: ^1.2.1+1
+  path: ^1.7.0
+  slidy: ^2.1.2+2
+  sqflite: ^1.3.1
+  url_launcher: ^5.7.10
 dev_dependencies:
-  mockito: ^4.1.1
-  mobx_codegen: ^1.1.0+1
-  build_runner: ^1.10.0
   flutter_test:
     sdk: flutter
+  build_runner: ^1.10.0
+  mobx_codegen: ^1.1.0+1
+  mockito: ^4.1.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -94,4 +93,3 @@ flutter_icons:
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
 scripts: null
-
